added initial instructions